wk_taa_taaqa/src/objects/Requests__c.object
<CustomObject>
    <fields>
        <fullName>Current_Due_Date_Completion_Date__c</fullName>
        <inlineHelpText>For open Requests, enter the current targeted Due Date. For completed Requests, enter the date the request was completed.</inlineHelpText>
        <label>Current Due Date/Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Status_Comments__c</fullName>
        <inlineHelpText>Input summary comments on current status, next steps, etc. (255 characters)</inlineHelpText>
        <label>Current Status Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Prioritized__c</fullName>
        <label>Date Prioritized</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce/CRM</fullName>
                </value>
                <value>
                    <fullName>CPQ</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Due_Date__c</fullName>
        <label>Original Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Prioritization_Status__c</fullName>
        <inlineHelpText>Prioritized = on current work log with target date
Backlog = on list for future completion
Cancelled = will not be completed</inlineHelpText>
        <label>Prioritization Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New - Not Reviewed</fullName>
                    <color>#CC33CC</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Reviewed - Prioritized</fullName>
                    <color>#B6E32E</color>
                </value>
                <value>
                    <fullName>Reviewed - Backlog</fullName>
                    <color>#000099</color>
                </value>
                <value>
                    <fullName>Reviewed - Cancelled</fullName>
                    <color>#999999</color>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#419249</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                    <color>#FF9900</color>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Low</fullName>
                    <color>#3366FF</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <label>Requested By</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_by_Organization__c</fullName>
        <label>Requested by Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Product Mgmt</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Finance</fullName>
                    <color>#A845DC</color>
                </value>
                <value>
                    <fullName>Comp</fullName>
                    <color>#F3D904</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Ops_Mgmt_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used to indicate the Sales Ops team accountable for this Request (Julia, Kevin, Amy, Kurt).</inlineHelpText>
        <label>Sales Ops Mgmt Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#CC0000</color>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Complete</fullName>
                    <color>#006600</color>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <color>#999999</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Process</fullName>
                    <color>#0B6FCE</color>
                </value>
                <value>
                    <fullName>System Enhancement</fullName>
                    <color>#78C953</color>
                </value>
                <value>
                    <fullName>Reports &amp; Dashboards</fullName>
                    <color>#E27001</color>
                </value>
                <value>
                    <fullName>Training</fullName>
                    <color>#33CCFF</color>
                </value>
                <value>
                    <fullName>Communication</fullName>
                    <color>#CC66CC</color>
                </value>
                <value>
                    <fullName>Data</fullName>
                    <color>#F3D904</color>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <color>#A53711</color>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Request</label>
    <listViews>
        <fullName>All_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Current_Status_Comments__c</columns>
        <columns>Sales_Ops_Mgmt_Owner__c</columns>
        <columns>Prioritization_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Due_Date_Completion_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <label>All Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Past_Due_Requests</fullName>
        <columns>NAME</columns>
        <columns>Sales_Ops_Mgmt_Owner__c</columns>
        <columns>Prioritization_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Due_Date_Completion_Date__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Current_Status_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <filters>
            <field>Current_Due_Date_Completion_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>All Past Due Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Closed_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Prioritization_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Due_Date_Completion_Date__c</columns>
        <columns>Current_Status_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>My Closed  Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Open_Requests</fullName>
        <columns>NAME</columns>
        <columns>Requested_By__c</columns>
        <columns>Prioritization_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Due_Date_Completion_Date__c</columns>
        <columns>Current_Status_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <label>My Open Requests</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>My_Past_Due_Requests</fullName>
        <columns>NAME</columns>
        <columns>Prioritization_Status__c</columns>
        <columns>Status__c</columns>
        <columns>Current_Due_Date_Completion_Date__c</columns>
        <columns>Current_Status_Comments__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Not Started,In Progress</value>
        </filters>
        <filters>
            <field>Current_Due_Date_Completion_Date__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>My Past Due Requests</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_for_Prioritized_Requests</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
ISPICKVAL(Prioritization_Status__c, &quot;Reviewed - Prioritized&quot;),
ISPICKVAL(Prioritization_Status__c, &quot;Completed&quot;)
) &amp;&amp;
OR(
ISBLANK(Start_Date__c),
ISBLANK(Current_Due_Date_Completion_Date__c) 
)</errorConditionFormula>
        <errorMessage>Please enter a Start Date and Due Date.</errorMessage>
    </validationRules>
</CustomObject>